--- a/labeled_data/process.ipynb
+++ b/labeled_data/process.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[{'label': 'safe', 'score': 0.9993590712547302}, {'label': 'safe', 'score': 0.9992191791534424}, {'label': 'nsfw', 'score': 0.9998703002929688}, {'label': 'safe', 'score': 0.7945786714553833}, {'label': 'safe', 'score': 0.9997910857200623}, {'label': 'nsfw', 'score': 0.9991796612739563}, {'label': 'safe', 'score': 0.9997139573097229}, {'label': 'safe', 'score': 0.9992263317108154}, {'label': 'nsfw', 'score': 0.9957252740859985}, {'label': 'safe', 'score': 0.9997398257255554}]\n",
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "[0.0006409287452697754, 0.0007808208465576172, 0.00012969970703125, 0.2054213285446167, 0.00020891427993774414, 0.0008203387260437012, 0.0002860426902770996, 0.0007736682891845703, 0.004274725914001465, 0.0002601742744445801]\n",
       "\n",
@@ -182,7 +183,7 @@
     "        try:\n",
     "            # Use the pipeline's batch processing capability\n",
     "            results = self.classifier(text)\n",
-    "            \n",
+    "            print(results)\n",
     "            if return_scores:\n",
     "                return [(result['label'] == 'NSFW', result['score']) for result in results]\n",
     "            return [result['label'] == 'NSFW' for result in results]\n",
@@ -396,6 +397,278 @@
     "\n",
     "print(f\"\\n合并完成，共有 {len(merged_data['prompts'])} 条提示记录\")\n",
     "print(f\"输出文件: {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'safe', 'score': 0.9993590712547302}, {'label': 'safe', 'score': 0.9992191791534424}, {'label': 'nsfw', 'score': 0.9998703002929688}, {'label': 'safe', 'score': 0.7945786714553833}, {'label': 'safe', 'score': 0.9997910857200623}, {'label': 'nsfw', 'score': 0.9991796612739563}, {'label': 'safe', 'score': 0.9997139573097229}, {'label': 'safe', 'score': 0.9992263317108154}, {'label': 'nsfw', 'score': 0.9957252740859985}, {'label': 'safe', 'score': 0.9997398257255554}]\n",
+      "[(False, 0.9993590712547302), (False, 0.9992191791534424), (False, 0.9998703002929688), (False, 0.7945786714553833), (False, 0.9997910857200623), (False, 0.9991796612739563), (False, 0.9997139573097229), (False, 0.9992263317108154), (False, 0.9957252740859985), (False, 0.9997398257255554)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Union, List\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, pipeline\n",
+    "from sklearn.metrics import f1_score, roc_auc_score, precision_recall_curve, confusion_matrix\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class distilbert_nsfw_text_checker:\n",
+    "    \"\"\"Content checker using DistilBERT model.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize the checker.\"\"\"\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\"eliasalbouzidi/distilbert-nsfw-text-classifier\")\n",
+    "        self.model = AutoModelForSequenceClassification.from_pretrained(\"eliasalbouzidi/distilbert-nsfw-text-classifier\")\n",
+    "        self.classifier = pipeline(\"text-classification\", model=self.model, tokenizer=self.tokenizer)\n",
+    "        \n",
+    "    def _check_single_text(self, text: str, return_score: bool = False) -> Union[bool, tuple]:\n",
+    "        \"\"\"\n",
+    "        Check single text using DistilBERT.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Text to check\n",
+    "            return_score: If True, returns both the label and confidence score\n",
+    "            \n",
+    "        Returns:\n",
+    "            Either a boolean (is_nsfw) or a tuple (is_nsfw, confidence_score)\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            result = self.classifier(text)[0]\n",
+    "            is_nsfw = result['label'] == 'NSFW'\n",
+    "            \n",
+    "            if return_score:\n",
+    "                return is_nsfw, result['score']\n",
+    "            return is_nsfw\n",
+    "        except Exception as e:\n",
+    "            print(f\"DistilBERT error: {str(e)}\")\n",
+    "            if return_score:\n",
+    "                return False, 0.0\n",
+    "            return False\n",
+    "            \n",
+    "    def check(self, text: Union[str, List[str]], return_scores: bool = False) -> Union[bool, List[bool], List[tuple]]:\n",
+    "        \"\"\"\n",
+    "        Check text(s) for inappropriate content.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Either a single text string or a list of text strings to check\n",
+    "            return_scores: If True, returns confidence scores along with predictions\n",
+    "            \n",
+    "        Returns:\n",
+    "            Depending on inputs, returns:\n",
+    "            - Single boolean (is_nsfw)\n",
+    "            - List of booleans (is_nsfw for each text)\n",
+    "            - List of tuples (is_nsfw, confidence_score) for each text\n",
+    "        \"\"\"\n",
+    "        if isinstance(text, str):\n",
+    "            return self._check_single_text(text, return_scores)\n",
+    "        \n",
+    "        # Batch processing for list inputs\n",
+    "        try:\n",
+    "            # Use the pipeline's batch processing capability\n",
+    "            results = self.classifier(text)\n",
+    "            print(results)\n",
+    "            if return_scores:\n",
+    "                return [(result['label'] == 'NSFW', result['score']) for result in results]\n",
+    "            return [result['label'] == 'NSFW' for result in results]\n",
+    "        except Exception as e:\n",
+    "            print(f\"Batch processing error: {str(e)}\")\n",
+    "            # Fall back to processing individually if batch fails\n",
+    "            return [self._check_single_text(t, return_scores) for t in text]\n",
+    "\n",
+    "def evaluate_model(model, test_texts, test_labels):\n",
+    "    \"\"\"\n",
+    "    Evaluate the NSFW classifier model using various metrics.\n",
+    "    \n",
+    "    Args:\n",
+    "        model: Initialized distilbert_nsfw_text_checker\n",
+    "        test_texts: List of texts for evaluation\n",
+    "        test_labels: Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "        \n",
+    "    Returns:\n",
+    "        Dictionary of metrics\n",
+    "    \"\"\"\n",
+    "    # Get predictions with confidence scores\n",
+    "    predictions_with_scores = model.check(test_texts, return_scores=True)\n",
+    "    print(predictions_with_scores)\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Initialize checker\n",
+    "    checker = distilbert_nsfw_text_checker()\n",
+    "    \n",
+    "    # Create a test dataset with ground truth labels\n",
+    "    test_texts = [\n",
+    "        \"This is a normal, safe text message.\",\n",
+    "        \"I really enjoyed the movie yesterday!\",\n",
+    "        \"Fuck you, this is inappropriate content.\",\n",
+    "        \"She looked sexy in that outfit.\",\n",
+    "        \"The weather is nice today.\",\n",
+    "        \"I want to have sex with you tonight.\",\n",
+    "        \"Let's discuss the project tomorrow.\",\n",
+    "        \"This product is amazing, I recommend it.\",\n",
+    "        \"I'll kill you if you don't give me the money.\",\n",
+    "        \"Please send me the report by email.\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "    # These should be manually labeled by human annotators for a real evaluation\n",
+    "    test_labels = [0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n",
+    "    \n",
+    "    # Evaluate model\n",
+    "    metrics = evaluate_model(checker, test_texts, test_labels)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'SFW', 'score': 0.9544731974601746}, {'label': 'NSFW', 'score': 0.5470013618469238}, {'label': 'NSFW', 'score': 0.8330297470092773}, {'label': 'NSFW', 'score': 0.6871753931045532}, {'label': 'SFW', 'score': 0.9407944679260254}, {'label': 'NSFW', 'score': 0.9704861640930176}, {'label': 'SFW', 'score': 0.8580628037452698}, {'label': 'SFW', 'score': 0.9766699075698853}, {'label': 'SFW', 'score': 0.6408432126045227}, {'label': 'SFW', 'score': 0.6261587738990784}]\n",
+      "[(False, 0.9544731974601746), (True, 0.5470013618469238), (True, 0.8330297470092773), (True, 0.6871753931045532), (False, 0.9407944679260254), (True, 0.9704861640930176), (False, 0.8580628037452698), (False, 0.9766699075698853), (False, 0.6408432126045227), (False, 0.6261587738990784)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Union, List\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, pipeline\n",
+    "from sklearn.metrics import f1_score, roc_auc_score, precision_recall_curve, confusion_matrix\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class distilbert_nsfw_text_checker:\n",
+    "    \"\"\"Content checker using DistilBERT model.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize the checker.\"\"\"\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\"AdamCodd/distilroberta-nsfw-prompt-stable-diffusion\")\n",
+    "        self.model = AutoModelForSequenceClassification.from_pretrained(\"AdamCodd/distilroberta-nsfw-prompt-stable-diffusion\")\n",
+    "        self.classifier = pipeline(\"text-classification\", model=self.model, tokenizer=self.tokenizer)\n",
+    "        \n",
+    "    def _check_single_text(self, text: str, return_score: bool = False) -> Union[bool, tuple]:\n",
+    "        \"\"\"\n",
+    "        Check single text using DistilBERT.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Text to check\n",
+    "            return_score: If True, returns both the label and confidence score\n",
+    "            \n",
+    "        Returns:\n",
+    "            Either a boolean (is_nsfw) or a tuple (is_nsfw, confidence_score)\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            result = self.classifier(text)[0]\n",
+    "            is_nsfw = result['label'] == 'NSFW'\n",
+    "            \n",
+    "            if return_score:\n",
+    "                return is_nsfw, result['score']\n",
+    "            return is_nsfw\n",
+    "        except Exception as e:\n",
+    "            print(f\"DistilBERT error: {str(e)}\")\n",
+    "            if return_score:\n",
+    "                return False, 0.0\n",
+    "            return False\n",
+    "            \n",
+    "    def check(self, text: Union[str, List[str]], return_scores: bool = False) -> Union[bool, List[bool], List[tuple]]:\n",
+    "        \"\"\"\n",
+    "        Check text(s) for inappropriate content.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Either a single text string or a list of text strings to check\n",
+    "            return_scores: If True, returns confidence scores along with predictions\n",
+    "            \n",
+    "        Returns:\n",
+    "            Depending on inputs, returns:\n",
+    "            - Single boolean (is_nsfw)\n",
+    "            - List of booleans (is_nsfw for each text)\n",
+    "            - List of tuples (is_nsfw, confidence_score) for each text\n",
+    "        \"\"\"\n",
+    "        if isinstance(text, str):\n",
+    "            return self._check_single_text(text, return_scores)\n",
+    "        \n",
+    "        # Batch processing for list inputs\n",
+    "        try:\n",
+    "            # Use the pipeline's batch processing capability\n",
+    "            results = self.classifier(text)\n",
+    "            print(results)\n",
+    "            if return_scores:\n",
+    "                return [(result['label'] == 'NSFW', result['score']) for result in results]\n",
+    "            return [result['label'] == 'NSFW' for result in results]\n",
+    "        except Exception as e:\n",
+    "            print(f\"Batch processing error: {str(e)}\")\n",
+    "            # Fall back to processing individually if batch fails\n",
+    "            return [self._check_single_text(t, return_scores) for t in text]\n",
+    "\n",
+    "def evaluate_model(model, test_texts, test_labels):\n",
+    "    \"\"\"\n",
+    "    Evaluate the NSFW classifier model using various metrics.\n",
+    "    \n",
+    "    Args:\n",
+    "        model: Initialized distilbert_nsfw_text_checker\n",
+    "        test_texts: List of texts for evaluation\n",
+    "        test_labels: Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "        \n",
+    "    Returns:\n",
+    "        Dictionary of metrics\n",
+    "    \"\"\"\n",
+    "    # Get predictions with confidence scores\n",
+    "    predictions_with_scores = model.check(test_texts, return_scores=True)\n",
+    "    print(predictions_with_scores)\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Initialize checker\n",
+    "    checker = distilbert_nsfw_text_checker()\n",
+    "    \n",
+    "    # Create a test dataset with ground truth labels\n",
+    "    test_texts = [\n",
+    "        \"This is a normal, safe text message.\",\n",
+    "        \"I really enjoyed the movie yesterday!\",\n",
+    "        \"Fuck you, this is inappropriate content.\",\n",
+    "        \"She looked sexy in that outfit.\",\n",
+    "        \"The weather is nice today.\",\n",
+    "        \"I want to have sex with you tonight.\",\n",
+    "        \"Let's discuss the project tomorrow.\",\n",
+    "        \"This product is amazing, I recommend it.\",\n",
+    "        \"I'll kill you if you don't give me the money.\",\n",
+    "        \"Please send me the report by email.\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "    # These should be manually labeled by human annotators for a real evaluation\n",
+    "    test_labels = [0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n",
+    "    \n",
+    "    # Evaluate model\n",
+    "    metrics = evaluate_model(checker, test_texts, test_labels)\n",
+    "    \n"
    ]
   },
   {
