--- a/data/jailbreak_diffusion_bench/process.ipynb
+++ b/data/jailbreak_diffusion_bench/process.ipynb
@@ -915,6 +915,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8 categories.\n",
+      "Category 'abuse': Selected 25/25 prompts ✓\n",
+      "Category 'discrimination and disinformation': Selected 25/25 prompts ✓\n",
+      "Category 'harassment': Selected 25/25 prompts ✓\n",
+      "Category 'hate content': Selected 25/25 prompts ✓\n",
+      "Category 'illegal activity': Selected 25/25 prompts ✓\n",
+      "Category 'nudity and sexual content': Selected 25/25 prompts ✓\n",
+      "Category 'physical harm and violence': Selected 25/25 prompts ✓\n",
+      "Category 'shocking': Selected 25/25 prompts ✓\n",
+      "\n",
+      "Quantity check:\n",
+      "- Expected total (if all categories had enough prompts): 200\n",
+      "- Actual total: 200\n",
+      "\n",
+      "Saved 200 prompts to: jailbreak_diffusion_bench_filtered_200.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "def sample_by_category(input_file, output_file, samples_per_category=25):\n",
+    "    \"\"\"\n",
+    "    Sample prompts from each category in the input file and save them to the output file.\n",
+    "    \n",
+    "    Args:\n",
+    "        input_file (str): Path to the input JSON file\n",
+    "        output_file (str): Path to the output JSON file\n",
+    "        samples_per_category (int): Number of samples to select from each category\n",
+    "    \"\"\"\n",
+    "    # Load the input file\n",
+    "    with open(input_file, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Group prompts by category\n",
+    "    category_prompts = defaultdict(list)\n",
+    "    for prompt in data.get(\"prompts\", []):\n",
+    "        # A prompt may belong to multiple categories\n",
+    "        if \"category\" in prompt:\n",
+    "            for category in prompt[\"category\"]:\n",
+    "                category_prompts[category].append(prompt)\n",
+    "    \n",
+    "    print(f\"Found {len(category_prompts)} categories.\")\n",
+    "    \n",
+    "    # Check if each category has enough prompts\n",
+    "    for category, prompts in category_prompts.items():\n",
+    "        if len(prompts) < samples_per_category:\n",
+    "            print(f\"WARNING: Category '{category}' only has {len(prompts)} prompts, fewer than the requested {samples_per_category}.\")\n",
+    "    \n",
+    "    # Sample prompts from each category\n",
+    "    selected_prompts = []\n",
+    "    selected_ids = set()  # To avoid duplicates\n",
+    "    \n",
+    "    for category, prompts in sorted(category_prompts.items()):\n",
+    "        # Shuffle the prompts in this category\n",
+    "        random.shuffle(prompts)\n",
+    "        \n",
+    "        # Select up to samples_per_category prompts that haven't been selected yet\n",
+    "        category_samples = []\n",
+    "        for prompt in prompts:\n",
+    "            if prompt[\"id\"] not in selected_ids and len(category_samples) < samples_per_category:\n",
+    "                category_samples.append(prompt)\n",
+    "                selected_ids.add(prompt[\"id\"])\n",
+    "        \n",
+    "        # Add the selected prompts to our result\n",
+    "        selected_prompts.extend(category_samples)\n",
+    "        \n",
+    "        # Quantity check feedback\n",
+    "        if len(category_samples) == samples_per_category:\n",
+    "            status = \"✓\"\n",
+    "        else:\n",
+    "            status = \"✗\"\n",
+    "        \n",
+    "        print(f\"Category '{category}': Selected {len(category_samples)}/{samples_per_category} prompts {status}\")\n",
+    "    \n",
+    "    # Verify the total number is as expected\n",
+    "    expected_total = len(category_prompts) * samples_per_category\n",
+    "    actual_total = len(selected_prompts)\n",
+    "    \n",
+    "    print(f\"\\nQuantity check:\")\n",
+    "    print(f\"- Expected total (if all categories had enough prompts): {expected_total}\")\n",
+    "    print(f\"- Actual total: {actual_total}\")\n",
+    "    \n",
+    "    if actual_total < expected_total:\n",
+    "        print(f\"- Difference: {expected_total - actual_total} fewer prompts than expected\")\n",
+    "    \n",
+    "    # Create the output JSON with the same structure\n",
+    "    output_data = {\n",
+    "        \"name\": data.get(\"name\", \"\"),\n",
+    "        \"description\": data.get(\"description\", \"\"),\n",
+    "        \"prompts\": selected_prompts\n",
+    "    }\n",
+    "    \n",
+    "    # Save to the output file\n",
+    "    with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(output_data, f, ensure_ascii=False, indent=2)\n",
+    "    \n",
+    "    print(f\"\\nSaved {len(selected_prompts)} prompts to: {output_file}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    input_file = \"jailbreak_diffusion_bench_filtered_400.json\"\n",
+    "    output_file = \"jailbreak_diffusion_bench_filtered_200.json\"\n",
+    "    sample_by_category(input_file, output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
